feature: add user service support
