# internal/transport/http/handler/v1/profile/dto/response_body/user.go
@@ -1,0 +1,7 @@
+package response_body
+
+type GenerateAvatarUploadLink struct {
+	AvatarId string            `json:"avatarId"`
+	Link     string            `json:"link"`
+	FormData map[string]string `json:"formData"`
+}
