# internal/transport/http/router/v1/router.go
@@ -65,6 +65,11 @@ func (r *Router) initProfileRoutes(api *gin.RouterGroup) {
 	profileGroup := api.Group("/profile", r.authMiddleware.AuthorizeUser)
 	{
 		profileGroup.DELETE("", r.handler.Profile.DeleteProfile)
+		profileGroup.PUT("/name", r.handler.Profile.SetName)
+		profileGroup.PUT("/description", r.handler.Profile.SetDescription)
+		profileGroup.POST("/avatar", r.handler.Profile.GenerateAvatarUploadLink)
+		profileGroup.PUT("/avatar", r.handler.Profile.ConfirmAvatarUploading)
+		profileGroup.DELETE("/avatar", r.handler.Profile.DeleteAvatar)
 	}
 }
 
